libtasn1: update master_sites, livecheck.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72882 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/libtasn1/Portfile
+++ b/dports/devel/libtasn1/Portfile
@@ -15,7 +15,7 @@ long_description \
     The libtasn1 library was developed for ASN1 (Abstract Syntax Notification \
     One) structures management.
 
-master_sites    gnu:gnutls
+master_sites    gnu
 
 checksums           md5     14cc361500d2e768a8a6ec538ce3fecb \
                     sha1    d6e0d449cf2da04c93f498d2cf4415f572611b46 \
@@ -24,5 +24,5 @@ checksums           md5     14cc361500d2e768a8a6ec538ce3fecb \
 use_parallel_build  yes
 
 livecheck.type  regex
-livecheck.url   http://ftp.gnu.org/pub/gnu/gnutls/
+livecheck.url   http://ftp.gnu.org/pub/gnu/libtasn1/
 livecheck.regex ${name}-(\\d+(\\.\\d+)*)
