kdesdk4: fix depends, #27056
git-svn-id: https://svn.macports.org/repository/macports/trunk@72883 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kdesdk4/Portfile
+++ b/dports/kde/kdesdk4/Portfile
@@ -18,7 +18,7 @@ distname            kdesdk-${version}
 checksums           sha1    8732dd0460e17bfdcfe6b9be467a90de14143cc1 \
                     rmd160  c594ea89867ab99f9bacd20e29892ccdefbefac4
 
-depends_lib-append  port:kdelibs4 port:kdebase4-runtime
+depends_lib-append  port:kdebase4
 
 configure.args-append   -DWITH_Boost:BOOL=OFF
 
