--- a/dports/perl/p5-business-isbn/Portfile
+++ b/dports/perl/p5-business-isbn/Portfile
@@ -1,22 +1,21 @@
 # $Id$
 
-PortSystem 1.0
-PortGroup perl5 1.0
+PortSystem          1.0
+PortGroup           perl5 1.0
 
-perl5.setup		Business-ISBN 2.03
-maintainers		nomaintainer
-description		work with International Standard Book Numbers
-long_description \
-                This package provides the Perl modules Business::ISBN, \
-                Business::ISBN10, and Business::ISBN13 for working with \
-                International Standard Book Numbers.
+perl5.setup         Business-ISBN 2.03
+maintainers         nomaintainer
+description         work with International Standard Book Numbers
+long_description    This package provides the Perl modules Business::ISBN, \
+                    Business::ISBN10, and Business::ISBN13 for working with \
+                    International Standard Book Numbers.
 
-checksums       md5     507f90ec2e8f53e138222895444cef4c \
-                sha1    640a1cd25aee1d5120ab8fc686a1ce22bed25361 \
-                rmd160  007e09ab1a4bacce962cd413ee4baf63761df2b7
+checksums           md5     507f90ec2e8f53e138222895444cef4c \
+                    sha1    640a1cd25aee1d5120ab8fc686a1ce22bed25361 \
+                    rmd160  007e09ab1a4bacce962cd413ee4baf63761df2b7
 
-platforms		darwin
+platforms           darwin
 
-depends_lib-append      port:p5-business-isbn-data
+depends_lib-append  port:p5-business-isbn-data
 
-supported_archs noarch
+supported_archs     noarch
