--- a/dports/perl/p5-business-isbn-data/Portfile
+++ b/dports/perl/p5-business-isbn-data/Portfile
@@ -3,8 +3,8 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Business-ISBN-Data 1.17
-maintainers         nomaintainer
+perl5.setup         Business-ISBN-Data 20081208
+maintainers         l2g.to:larry+macports
 description         ISBN data required for use of Business::ISBN
 long_description    This package provides ISBN data used by the \
                     Business::ISBN family of Perl modules to associate \
@@ -12,9 +12,9 @@ long_description    This package provides ISBN data used by the \
                     module so that it can be updated independently of the \
                     Business::ISBN code.
 
-checksums           md5     124ca2be2939da63029178b06395ddfa \
-                    sha1    dde06813daa5af511dc4414b7bf936b54ec301b7 \
-                    rmd160  41445035cfaabce75c2a4e0e5b60619c667a38e7
+checksums           md5     e8edb53f04830344e20f61b02b6ed054 \
+                    sha1    0a401fb00864fa6db8c52dcbeb0a59dea7359e9d \
+                    rmd160  4a46921f470abd50e89f8cb23cfb335a64f25413
 
 platforms           darwin
 
