--- a/dports/perl/p5-business-isbn/Portfile
+++ b/dports/perl/p5-business-isbn/Portfile
@@ -3,16 +3,16 @@
 PortSystem          1.0
 PortGroup           perl5 1.0
 
-perl5.setup         Business-ISBN 2.03
-maintainers         nomaintainer
+perl5.setup         Business-ISBN 2.05
+maintainers         l2g.to:larry+macports
 description         work with International Standard Book Numbers
 long_description    This package provides the Perl modules Business::ISBN, \
                     Business::ISBN10, and Business::ISBN13 for working with \
                     International Standard Book Numbers.
 
-checksums           md5     507f90ec2e8f53e138222895444cef4c \
-                    sha1    640a1cd25aee1d5120ab8fc686a1ce22bed25361 \
-                    rmd160  007e09ab1a4bacce962cd413ee4baf63761df2b7
+checksums           md5     944a2844711fa6ab1b079d8d2ef4cd75 \
+                    sha1    350d8115179991c5a084daa3e1ef2f8243b512b6 \
+                    rmd160  a947a428755d1996ce205551a7779781a6a330c8
 
 platforms           darwin
 
