gnutls: update dependencies, external opencdk is no longer used but libgcrypt is, reinplace does nothing now, parallel build is default.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72898 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gnutls/Portfile
+++ b/dports/devel/gnutls/Portfile
@@ -18,29 +18,21 @@ long_description \
 
 master_sites    gnu
 
-checksums           md5     eb0a6d7d3cb9ac684d971c14f9f6d3ba \
-                    sha1    bff911d4fd7389aa6698a644b3748eb2d23715bc \
-                    rmd160  1cfda29a60df3b032b8b611e4341c2e834bb26b2
+checksums       md5     eb0a6d7d3cb9ac684d971c14f9f6d3ba \
+                sha1    bff911d4fd7389aa6698a644b3748eb2d23715bc \
+                rmd160  1cfda29a60df3b032b8b611e4341c2e834bb26b2
 
 use_bzip2       yes
 
-post-patch {
-    reinplace -E /libtasn1_config_version=/s/--version/--modversion/ \
-        $worksrcpath/configure
-}
-
 depends_build   port:pkgconfig
 
-depends_lib     port:libtasn1 \
-                port:opencdk \
+depends_lib     port:libgcrypt \
+                port:libtasn1 \
                 port:lzo \
                 port:readline
 
 configure.args  --with-lzo \
-                --disable-guile \
-                ac_cv_path_LIBTASN1_CONFIG="pkg-config libtasn1"
-
-use_parallel_build  yes
+                --disable-guile
 
 test.run        yes
 test.target     check
