--- a/dports/java/commons-daemon/Portfile
+++ b/dports/java/commons-daemon/Portfile
@@ -30,6 +30,22 @@ depends_lib			bin:java:kaffe \
 
 configure.dir       ${worksrcpath}/src/native/unix
 
+platform macosx {
+    pre-configure {
+        if {![file exists "/System/Library/Frameworks/JavaVM.framework/Headers/jni.h"]} {
+            ui_error "${name} requires the Java for Mac OS X development headers."
+            if {${os.major} == 10} {
+                ui_error "Download the Java Developer Package from: <https://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20719>"
+            } elseif {${os.major} == 9} {
+                ui_error "Download the Java Developer Package from: <https://connect.apple.com/cgi-bin/WebObjects/MemberSite.woa/wa/getSoftware?bundleID=20720>"
+            } else {
+                ui_error "Make sure your Xcode installation is complete."
+            }
+            return -code error "missing Java headers"
+        }
+    }
+}
+
 build.dir           ${configure.dir}
 build.target        clean all
 
