xorg-libXmu: Bump to 1.1.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72906 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXmu/Portfile
+++ b/dports/x11/xorg-libXmu/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-libXmu
-version		1.0.5
+version		1.1.0
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org libXmu
@@ -13,9 +13,9 @@ long_description X.org Xmu library
 master_sites	http://xorg.freedesktop.org/archive/individual/lib
 
 distname	libXmu-${version}
-checksums           md5     fc4d66be7a1a1eb474954728415e46d6 \
-                    sha1    e7ff5960f2374852b941f909cdbdeafe7d29322f \
-                    rmd160  3d07f6ca5dc5ddb571dd25e35253dba3baff834b
+checksums           md5     6836883a0120e8346cf7f58dc42e465a \
+                    sha1    81876a0848070bfc4476a2538fc16898eb6d96cd \
+                    rmd160  e6ca19dfb86a3532faa6e37c8a5cd6edff6a1c62
 use_bzip2	yes
 use_parallel_build      yes
 
@@ -25,6 +25,39 @@ depends_build \
 depends_lib \
 	port:xorg-libXext \
 	port:xorg-libXt
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-docs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-docs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-docs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
