xorg-libXdmcp: Bump to 1.1.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72907 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXdmcp/Portfile
+++ b/dports/x11/xorg-libXdmcp/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-libXdmcp
-version		1.0.3
+version		1.1.0
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org libXdmcp
@@ -14,13 +14,46 @@ master_sites    http://xorg.freedesktop.org/archive/individual/lib
 use_parallel_build      yes
 
 distname	libXdmcp-${version}
-checksums           md5     d60941d471800f41a3f19b24bea855a7 \
-                    sha1    7efd71d29d6cfba797b8791398e4d81ade677d77 \
-                    rmd160  eac931ccea5e2eb88f3f86afbdfd8efc01c3fd50
+checksums           md5     762b6bbaff7b7d0831ddb4f072f939a5 \
+                    sha1    28132db24727552f77e998e6a6798a5b9b30789f \
+                    rmd160  4a0eb45bb198365263974084edfcb987c3e81397
 use_bzip2	yes
 
 depends_build   port:pkgconfig \
                 port:xorg-xproto
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-docs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-docs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-docs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
