gramps doesn't need all of gnome-python26-extras librsvg is required for progress dialog icons
git-svn-id: https://svn.macports.org/repository/macports/trunk@72909 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gramps/Portfile
+++ b/dports/gnome/gramps/Portfile
@@ -48,9 +48,11 @@ depends_build                   port:pkgconfig \
                                 port:gnome-doc-utils \
                                 port:shared-mime-info
 
-depends_lib                     port:gnome-python26-extras \
+# librsvg is required at least for icons in dialogs
+depends_lib                     port:py26-gtkspell \
                                 port:py26-enchant \
                                 port:py26-webkitgtk \
+                                port:librsvg \
                                 port:aspell-dict-en
 
 #
@@ -60,7 +62,7 @@ depends_lib                     port:gnome-python26-extras \
 universal_variant               no
 
 post-activate {
-    system "update-mime-database ${prefix}/share/mime"
+    system "${prefix}/bin/update-mime-database ${prefix}/share/mime"
 }
 
 livecheck.type                  regex
