xorg-libXtst: Bump to 1.2.0
git-svn-id: https://svn.macports.org/repository/macports/trunk@72911 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXtst/Portfile
+++ b/dports/x11/xorg-libXtst/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            xorg-libXtst
-version         1.1.0
+version         1.2.0
 categories      x11 devel
 maintainers     jeremyhu openmaintainer
 description     X.org libXt
@@ -13,9 +13,9 @@ long_description X.org libXtst library.
 master_sites     http://xorg.freedesktop.org/archive/individual/lib/
 
 distname    libXtst-${version}
-checksums           md5     dd6f3e20b87310187121539f9605d977 \
-                    sha1    4363e9285bfb5a884073efacc50d39edb803a1a5 \
-                    rmd160  588fe77d9f915f5f6521ec660129b45adfc16acc
+checksums           md5     7c592c72da6676f8b0aeec9133b81686 \
+                    sha1    9fb06ed599caf7f9e7115cbbfadf02b47c17aa72 \
+                    rmd160  0cde01dd80e77308e79ffecad01f0a1e3d391c39
 
 use_bzip2   yes
 use_parallel_build      yes
@@ -25,6 +25,40 @@ depends_build   port:pkgconfig
 depends_lib     port:xorg-libXext \
                 port:xorg-libXi \
                 port:xorg-recordproto
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
