xorg-libXmu: Add missing dep on port:xorg-sgml-doctools
git-svn-id: https://svn.macports.org/repository/macports/trunk@72912 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-libXmu/Portfile
+++ b/dports/x11/xorg-libXmu/Portfile
@@ -38,7 +38,8 @@ build.args V=1
 variant docs description "Install extra documentation" {
 	depends_build-append \
 		port:fop \
-		port:xmlto
+		port:xmlto \
+		port:xorg-sgml-doctools
 
 	depends_skip_archcheck-append \
 		fop \
