xorg-bigreqsproto: Bumpt to 1.1.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72923 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-bigreqsproto/Portfile
+++ b/dports/x11/xorg-bigreqsproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-bigreqsproto
-version		1.1.0
+version		1.1.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org bigreqsproto
@@ -13,10 +13,44 @@ long_description Prototype headers for BigReqs extension to X11
 master_sites 	http://xorg.freedesktop.org/archive/individual/proto/
 
 distname	bigreqsproto-${version}
-checksums           md5     d30c5dbf19ca6dffcd9788227ecff8c5 \
-                    sha1    32ae0505ec963cc5c0e3ee9258b126e6865d1b1b \
-                    rmd160  445f8bde2c03561255c505860fdba9fedb029edc
+checksums           md5     6f6c24436c2b3ab235eb14a85b9aaacf \
+                    sha1    2db1d1e98958eee4d6cae0f68dbd03b2ec1018ce \
+                    rmd160  1cce15a22eb1c2e0eb14f1dfd1c8c21fd19d4112
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
