--- a/dports/x11/xorg-encodings/Portfile
+++ b/dports/x11/xorg-encodings/Portfile
@@ -3,11 +3,11 @@
 PortSystem          1.0
 name                xorg-encodings
 set my_name         encodings
-version             1.0.3
+version             1.0.4
 categories          x11 x11-font graphics
 maintainers         nomaintainer
 description         X.org font encodings
-long_description    ${description}
+long_description    character set encoding tables used with the X.Org font software
 
 platforms           darwin
 
@@ -16,9 +16,9 @@ master_sites        http://xorg.freedesktop.org/archive/individual/font/
 distname            ${my_name}-${version}
 use_bzip2           yes
 
-checksums           md5     29637480e7ce12546668631067c19ced \
-                    sha1    615b8367ee20fc50688e4876aa250419927d64cc \
-                    rmd160  15ac1362cc1969d7e0101767820537d2db348d9a
+checksums           md5     0f2d6546d514c5cc4ecf78a60657a5c1 \
+                    sha1    24ace2470403f85a0d393769204029bd8247992a \
+                    rmd160  ba753c09d1caa912f86da49b25bc9fb5e145c63a
 
 depends_build       port:mkfontscale bin:gzip:gzip
 
