xorg-fontsproto: Bump to 2.1.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72928 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-fontsproto/Portfile
+++ b/dports/x11/xorg-fontsproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-fontsproto
-version		2.1.0
+version		2.1.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org fontsproto
@@ -13,10 +13,44 @@ long_description Font-related prototype header files for X11
 master_sites	 http://xorg.freedesktop.org/archive/individual/proto/
 
 distname	fontsproto-${version}
-checksums           md5     f3a857deadca3144fba041af1dbf7603 \
-                    sha1    395b300fd5120a7ff90cb8fea4e2356b9632dc3e \
-                    rmd160  1e9981b3a801794ccdf22d26a724a25135c1459b
+checksums           md5     37102ffcaa73f77d700acd6f7a25d8f0 \
+                    sha1    77ab428ad4ad7cf0294a72a2201d665c4edf5fb1 \
+                    rmd160  5c7b646dbfec1bf4ee1a38d490d9885c08ada0dd
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
