xorg-recordproto: Bump to 1.14.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72931 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-recordproto/Portfile
+++ b/dports/x11/xorg-recordproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-recordproto
-version		1.14
+version		1.14.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org recordproto
@@ -13,10 +13,44 @@ long_description Prototype headers for the Record extension to X11
 master_sites 	http://xorg.freedesktop.org/archive/individual/proto/
 
 distname	recordproto-${version}
-checksums           md5     70f5998c673aa510e2acd6d8fb3799de \
-                    sha1    212928572898ed150366c6026e2694b193ff9f79 \
-                    rmd160  bb911b2b93f9187a66b0a7dabf60d53b48d89fa2
+checksums           md5     24541a30b399213def35f48efd926c63 \
+                    sha1    14acb36540814bfe5d3caf47311b72a3bf1322bd \
+                    rmd160  cab883a9175adef6bab78b814a6c36ac22518fae
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
