xorg-scrnsaverproto: Bump to 1.2.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72932 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-scrnsaverproto/Portfile
+++ b/dports/x11/xorg-scrnsaverproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-scrnsaverproto
-version		1.2.0
+version		1.2.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org scrnsaverproto
@@ -13,10 +13,44 @@ long_description Prototype headers for the XScreenSaver extension to X11.
 master_sites 	http://xorg.freedesktop.org/archive/individual/proto/
 
 distname	scrnsaverproto-${version}
-checksums           md5     9040c991a56ee9b5976936f8c65d5c8a \
-                    sha1    c734cfe9a1ce57fd42957389dcc90518fd7ca6b6 \
-                    rmd160  cf7e6c56b71cca597839ff0358ee602600f8f3e8
+checksums           md5     6af0f2e3369f5f74e69345e214f5fd0d \
+                    sha1    94758e81ac20469c5b586b6cef924c8ab9a32e0f \
+                    rmd160  8e567d080daa9adcbfeeeb9b0fe27ec68e441246
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
