xorg-xcmiscproto: Bump to 1.2.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72933 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-xcmiscproto/Portfile
+++ b/dports/x11/xorg-xcmiscproto/Portfile
@@ -2,7 +2,7 @@
 PortSystem 1.0
 
 name		xorg-xcmiscproto
-version		1.2.0
+version		1.2.1
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org xcmiscproto
@@ -13,10 +13,44 @@ long_description Prototype headers for the XCMisc extension to X11
 master_sites 	http://xorg.freedesktop.org/archive/individual/proto/
 
 distname	xcmiscproto-${version}
-checksums           md5     7b83e4a7e9f4edc9c6cfb0500f4a7196 \
-                    sha1    1a55e042b33c0e0aaf2299942315a5208d644707 \
-                    rmd160  b66ac94e7eb966889136dcae61395b5917fa70f6
+checksums           md5     cd7372cd827bfd7ca7e9238f2ce274b1 \
+                    sha1    ff7ddb6e5698bf4461a524ca30f3b32e2a9dce8a \
+                    rmd160  f3259b96fac1e00534d29f93b8effd7717b04b41
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-specs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-specs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-specs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
