--- a/dports/python/py-sip/Portfile
+++ b/dports/python/py-sip/Portfile
@@ -49,7 +49,7 @@ test.cmd    cd siplib && ${prefix}/bin/python2.4 -c 'import sip'
 post-destroot {
     xinstall -m 755 -d ${destroot}${prefix}/share/doc
     file copy ${worksrcpath}/doc ${destroot}${prefix}/share/doc/${name}
-    xinstall -m 644 -W ${worksrcpath} LICENSE NEWS README TODO \
+    xinstall -m 644 -W ${worksrcpath} LICENSE LICENSE-GPL2 LICENSE-GPL3 NEWS README \
         ${destroot}${prefix}/share/doc/${name}
     system "${prefix}/bin/python2.4 ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
     system "${prefix}/bin/python2.4 -O ${prefix}/lib/python2.4/compileall.py ${destroot}${prefix}"
