qt3-mac: use applications_dir
git-svn-id: https://svn.macports.org/repository/macports/trunk@72939 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt3-mac/Portfile
+++ b/dports/aqua/qt3-mac/Portfile
@@ -73,7 +73,7 @@ platform darwin	{
           qt3-leopard.diff
 	post-destroot {
 		system "sh ${filespath}/fix_install_names.sh '${prefix}' '${destroot}'"
-		set appPath ${destroot}/Applications/MacPorts/Qt3
+		set appPath ${destroot}${applications_dir}/Qt3
 		xinstall -d -m 0755 ${appPath}
 		foreach app {assistant designer linguist qtconfig} {
 			system "mv -v ${destroot}${prefix}/bin/${app}.app \
