--- a/dports/aqua/qt3-mac/Portfile
+++ b/dports/aqua/qt3-mac/Portfile
@@ -23,7 +23,7 @@ destroot.violate_mtree	yes
 
 depends_lib		port:zlib port:libpng port:libmng
 
-variant mysql4 {
+variant mysql4 conflicts mysql5 description "add MySQL 4 support" {
 	depends_lib-append	port:mysql4
 	configure.args-delete	-no-sql-mysql
 	configure.args-append	-qt-sql-mysql \
@@ -32,7 +32,7 @@ variant mysql4 {
 					-plugin-sql-mysql
 }
 
-variant mysql5 {
+variant mysql5 conflicts mysql4 description "add MySQL 5 support" {
 	depends_lib-append	path:bin/mysql_config5:mysql5
 	configure.args-delete	-no-sql-mysql
 	configure.args-append	-qt-sql-mysql \
