--- a/dports/x11/qt4-x11/Portfile
+++ b/dports/x11/qt4-x11/Portfile
@@ -23,10 +23,7 @@ long_description    \
     Qt is a cross-platform application and UI framework for writing \
     cross-platform GUI applications. This version uses the X11 UI. \
     For a native Aqua version, see qt4-aqua\[-devel\].
-master_sites        trolltech \
-                    http://ftp.iasi.roedu.net/mirrors/ftp.trolltech.com/qt/source/ \
-                    http://ftp.ntua.gr/pub/X11/Qt/qt/source/ \
-                    http://wftp.tu-chemnitz.de/pub/Qt/qt/source/
+master_sites        trolltech
 distname            qt-x11-opensource-src-${version}
 
 checksums           \
