qt3-mac: update to 3.3.8b, fix build on 10.6 (#21459), remove bogus symlink (#2255)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72955 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/qt3-mac/Portfile
+++ b/dports/aqua/qt3-mac/Portfile
@@ -3,22 +3,20 @@
 PortSystem		1.0
 
 name			qt3-mac
-version			3.3.8
-revision		1
+version			3.3.8b
 categories		aqua
 maintainers		blair openmaintainer
 description		Qt Tool Kit (Native Aqua Version)
 long_description	This is Qt, TrollTech's C++ toolkit for writing \
 				cross-platform GUI applications.
 homepage		http://qt.nokia.com/
-master_sites		ftp://ftp.trolltech.com/qt/source/ \
-			http://ftp.silug.org/mirrors/ftp.trolltech.com/qt/source/ \
-			macports:blair
+master_sites		trolltech
 distname		qt-mac-free-${version}
-checksums		md5 dc8013ea4e5b54849f1ed5eedf6b03a3 \
-			sha1 b4835adbf5afc15042ce25270e684df395fe897c \
-			rmd160 dd2bfc62488e2d0dd500df4899aeaf28738bd8b0
+checksums		md5 307eebaa3ee3653595116ad6de36167c \
+			sha1 b366c077179c2e95c04c35da013a282f6b270ada \
+			rmd160 a71ec4140371c88bf5e29c1c2886f02d643a4a57
 platforms		darwin
+supported_archs	i386 ppc
 destroot.violate_mtree	yes
 
 depends_lib		port:zlib port:libpng port:libmng
@@ -70,21 +68,41 @@ post-destroot {
 platform darwin	{
 	patchfiles		patch-src-qt_install.pri \
 					patch-mkspecs-qmake.conf \
-          qt3-leopard.diff
+					patch-qmake_Makefile.unix.diff \
+					qt3-leopard.diff \
+					reinplace_support.diff \
+					dlcompat.diff
+    configure.args-append -ldl
+    post-patch {
+        reinplace s|__CC__|${configure.cc}| ${worksrcpath}/mkspecs/macx-g++/qmake.conf
+        reinplace s|__CXX__|${configure.cxx}| ${worksrcpath}/mkspecs/macx-g++/qmake.conf \
+                                              ${worksrcpath}/config.tests/mac/mac_version.test
+        if {[variant_isset universal]} {
+            set archflags ${configure.universal_cflags}
+        } else {
+            set archflags ${configure.cc_archflags}
+        }
+        reinplace s/__ARCHFLAGS__/${archflags}/ ${worksrcpath}/mkspecs/macx-g++/qmake.conf \
+                                                ${worksrcpath}/config.tests/mac/mac_version.test
+        if {!${configure.pipe}} {
+            reinplace s/-pipe// ${worksrcpath}/mkspecs/macx-g++/qmake.conf
+        }
+    }
 	post-destroot {
-		system "sh ${filespath}/fix_install_names.sh '${prefix}' '${destroot}'"
+		system "sh ${filespath}/fix_install_names.sh '${prefix}' '${destroot}' '${frameworks_dir}'"
 		set appPath ${destroot}${applications_dir}/Qt3
 		xinstall -d -m 0755 ${appPath}
 		foreach app {assistant designer linguist qtconfig} {
 			system "mv -v ${destroot}${prefix}/bin/${app}.app \
 				${appPath}/${app}.app"
 		}
-		if {![file exists ${destroot}${prefix}/lib/libqt.dylib]} {
-			set majorver [strsed ${version} {s/\.[0-9]*\.[0-9]*$//}]
-			set minorver [strsed ${version} {s/\.[0-9]*$//}]
-			system "ln -s libqt-mt.${version}.dylib ${destroot}${prefix}/lib/libqt.dylib"
-			system "ln -s libqt-mt.${version}.dylib ${destroot}${prefix}/lib/libqt.${majorver}.dylib"
-			system "ln -s libqt-mt.${version}.dylib ${destroot}${prefix}/lib/libqt.${minorver}.dylib"
+		regexp {[0-9.]+} $version baseversion
+		set majorver [lindex [split ${baseversion} .] 0]
+		set minorver [join [lrange [split ${baseversion} .] 0 1] .]
+		foreach libname "libqt libqt.${majorver} libqt.${minorver}" {
+		    if {![file exists "${destroot}${prefix}/lib/${libname}.dylib"]} {
+		        ln -s libqt-mt.${baseversion}.dylib "${destroot}${prefix}/lib/${libname}.dylib"
+		    }
 		}
 	}
 }
