set supported_archs for qt3-mac dependents
git-svn-id: https://svn.macports.org/repository/macports/trunk@72957 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wap11gui/Portfile
+++ b/dports/net/wap11gui/Portfile
@@ -33,6 +33,7 @@ platform darwin {
 		![file isfile ${prefix}/include/qt3/qt_x11.h]} {
 		depends_lib-delete	path:include/qt3/qt_x11.h:qt3
 		depends_lib-append	path:include/qt3/qt_mac.h:qt3-mac
+		supported_archs i386 ppc
 	}
 
 	patchfiles-append	patch-admin-ltmain.sh \
