--- a/dports/python/py26-pyqt3/Portfile
+++ b/dports/python/py26-pyqt3/Portfile
@@ -5,6 +5,7 @@ PortSystem	1.0
 name		py26-pyqt3
 version		3.17.4
 platforms	macosx
+supported_archs i386 ppc
 categories	python devel
 maintainers	blair
 description	PyQt is a set of Python bindings for the Qt toolkit
