--- a/dports/devel/qtc-qtsharp/Portfile
+++ b/dports/devel/qtc-qtsharp/Portfile
@@ -6,6 +6,7 @@ name		qtc-qtsharp
 version		0.7a
 categories	devel
 platforms	darwin
+supported_archs i386 ppc
 maintainers	nomaintainer
 description	Intermediate C++ glue for Qt C# bindings
 long_description	A cross-platform GUI toolkit for Mono and Portable.Net which provides set of classes that bind any CIL language to the Qt toolkit.
