--- a/dports/devel/qtsharp/Portfile
+++ b/dports/devel/qtsharp/Portfile
@@ -6,6 +6,7 @@ name		qtsharp
 version		0.7.1
 categories	devel
 platforms	darwin
+supported_archs i386 ppc
 maintainers	nomaintainer
 description	Qt bindings for C#
 long_description	A cross-platform GUI toolkit for Mono and Portable.Net which provides set of classes that bind any CIL language to the Qt toolkit.
