--- a/dports/science/qucs/Portfile
+++ b/dports/science/qucs/Portfile
@@ -8,6 +8,7 @@ version             0.0.15
 categories          science electronics
 maintainers         rowue
 platforms           darwin
+supported_archs     i386 ppc
 description         an integrated circuit simulator
 long_description    Qucs is an integrated circuit simulator. \
     You can setup an circut with graphical user interface. \
