k3dsurf: update to 0.6.2 (fixes #19239)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72958 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/k3dsurf/Portfile
+++ b/dports/math/k3dsurf/Portfile
@@ -1,8 +1,9 @@
 # $Id$
 
 PortSystem			1.0
+
 name				k3dsurf
-version				0.5.3
+version				0.6.2
 categories			math graphics science
 maintainers			nomaintainer
 description			Multidimensional surface visualizer
@@ -12,11 +13,13 @@ long_description \
 	POV-Ray in the area of parametric surfaces.
 
 platforms			darwin
+supported_archs     i386 ppc
 
 homepage			http://k3dsurf.sourceforge.net/
 master_sites		sourceforge
 
-checksums			md5 21101394945588551fefb5f62063f523
+checksums			md5 a7328ffde8453bb8c9977e46eaa170e6 \
+			sha1 6e63885cbdd174dc0d9828bf0fc3723461ffb58e
 
 depends_lib			port:qt3-mac
 
@@ -27,8 +30,7 @@ configure {
 build.env			QTDIR=${prefix}
 
 destroot {
-	xinstall -m 755 -d ${destroot}/Applications/MacPorts
+	xinstall -m 755 -d ${destroot}${applications_dir}
 	file copy ${worksrcpath}/bin/k3dsurf.app \
-		${destroot}/Applications/MacPorts
+		${destroot}${applications_dir}
 }
-
