wv: not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72961 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/wv/Portfile
+++ b/dports/textproc/wv/Portfile
@@ -22,5 +22,13 @@ depends_lib	path:lib/pkgconfig/glib-2.0.pc:glib2 \
 patch		{
 		reinplace "s|-pedantic||g" ${worksrcpath}/configure
 }
+
 configure.args	--mandir=${prefix}/share/man
+
+#
+# wv is not universal
+#
+
+universal_variant no
+
 livecheck.regex "<title>${name} (.*) released.*</title>"
