abiword-x11: not universal.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72962 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/abiword-x11/Portfile
+++ b/dports/editors/abiword-x11/Portfile
@@ -33,6 +33,12 @@ depends_lib	port:libgnomeui \
 
 configure.args	--disable-default-plugins
 
+#
+# port wv is not universal
+#
+
+universal_variant no
+
 livecheck.type  regex
 livecheck.url   http://www.abisource.com/downloads/${dname}/
 livecheck.regex ">(\[0-9\]+\\.\[0-9\]*\[02468\]\\.\[0-9\]+)/<"
