xfs: Bump to 1.1.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72968 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xfs/Portfile
+++ b/dports/x11/xfs/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem          1.0
 name                xfs
-version             1.1.0
+version             1.1.1
 categories          x11 graphics
 maintainers         jeremyhu openmaintainer
 description         X11 font server
@@ -16,15 +16,46 @@ homepage            http://www.x.org/
 master_sites        http://xorg.freedesktop.org/archive/individual/app/
 use_bzip2           yes
 
-checksums           md5     5cfc06a320f74f07a0aa73da62307e9a \
-                    sha1    040dee6ff7628c192874447fb178a965c744eea9 \
-                    rmd160  044fac33f02a242280d7e627249bd3aab092e9be
+checksums           md5     e02c6cae689c082b8c98a421df8f8670 \
+                    sha1    aa0f4cb4e307c531a78ba9d09c44d042c072742b \
+                    rmd160 5245c6276e4d71f697d2c388f92128f64231e40c 
 
 depends_build       port:pkgconfig
 
 depends_lib         port:xorg-libFS port:xorg-libXfont
 
-configure.args      --disable-devel-docs
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-devel-docs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-devel-docs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-devel-docs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
