xmh: Bump to 1.0.2
git-svn-id: https://svn.macports.org/repository/macports/trunk@72975 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xmh/Portfile
+++ b/dports/x11/xmh/Portfile
@@ -2,8 +2,7 @@
 
 PortSystem          1.0
 name                xmh
-version             1.0.1
-revision            2
+version             1.0.2
 categories          x11 mail
 maintainers         jeremyhu openmaintainer
 description         Send and read mail with an X11 interface to MH
@@ -15,21 +14,15 @@ homepage            http://www.x.org/
 master_sites        http://xorg.freedesktop.org/archive/individual/app/
 use_bzip2           yes
 
-checksums           md5     656bcbdd41818a8b5a9f7dba77a3eeba \
-                    sha1    4b7c2f3ba115c6011737137da0aecc29d648b234 \
-                    rmd160  dfdb66f2ebdb19ddffcaecca664a222883c9f129
+checksums           md5     f5956a63c3d4d4b004b73e8be64d6d6e \
+                    sha1    3b771d8e7de175dc6890bcf03bd1fcf91c7ad919 \
+                    rmd160  29d14122033edb31418aac199facc7e9d07c38de
 
 depends_build       port:pkgconfig
 
+depends_run         port:xbitmaps
+
 depends_lib         port:xorg-libXaw
-
-configure.args      --mandir=${prefix}/share/man --disable-xprint
-
-post-destroot {
-	# This got moved into xbitmaps
-	delete ${destroot}${prefix}/include/X11/bitmaps/black6
-	delete ${destroot}${prefix}/include/X11/bitmaps/box6
-}
 
 livecheck.type      regex
 livecheck.regex     ${name}-(\[\\d.\]+)${extract.suffix}
