libwww: update homepage
git-svn-id: https://svn.macports.org/repository/macports/trunk@72978 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/libwww/Portfile
+++ b/dports/www/libwww/Portfile
@@ -10,7 +10,8 @@ categories      www
 platforms       darwin
 maintainers     nomaintainer
 description     The W3C WWW Reference Library
-homepage	http://w3.org/
+homepage        http://www.w3.org/Library/
+
 long_description \
     Libwww is a general-purpose Web API written in C for Unix and Windows (Win32). \
     With a highly extensible and layered API, it can accommodate many different types \
