p5-libwww-perl: update to 5.837; install some helper programs as requested in #20511; indicate this port is noarch
git-svn-id: https://svn.macports.org/repository/macports/trunk@72979 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-libwww-perl/Portfile
+++ b/dports/perl/p5-libwww-perl/Portfile
@@ -3,8 +3,10 @@
 PortSystem                   1.0
 PortGroup                    perl5 1.0
 
-perl5.setup                  libwww-perl 5.836 LWP
+perl5.setup                  libwww-perl 5.837 ../by-authors/id/G/GA/GAAS
 maintainers                  narf_tm openmaintainer
+supported_archs              noarch
+
 description                  The World-Wide Web library for Perl
 long_description             The libwww-perl collection is a set of Perl \
                              modules which provides a simple and consistent \
@@ -16,9 +18,8 @@ long_description             The libwww-perl collection is a set of Perl \
                              and even classes that help you implement \
                              simple HTTP servers.
 
-checksums                    md5 424325417ed5a85700e604317872b588 \
-                             sha1 db49fd767db9852848479899b4989611c12f8bcb \
-                             rmd160 13cfeab7a4f142c2cf875ae74ed3b804b0189ce7
+checksums                    sha1    43b4b0449d9432be29a136a10545c8d1162bcc88 \
+                             rmd160  eed2d55409e0f712df188599abcb5ea237d93ac9
 
 patchfiles                   patch-lib-HTTP-Date.pm.diff
 
@@ -31,8 +32,4 @@ depends_lib-append           port:p5-io-compress \
                              port:p5-uri \
                              port:p5-crypt-ssleay
 
-configure.pre_args-append    -n
-
 use_parallel_build           yes
-
-universal_variant            no
