pdftk: update to 1.44
git-svn-id: https://svn.macports.org/repository/macports/trunk@72980 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/pdftk/Portfile
+++ b/dports/textproc/pdftk/Portfile
@@ -4,14 +4,13 @@
 PortSystem              1.0
 
 name                    pdftk
-version                 1.43
+version                 1.44
 categories              textproc graphics pdf
 maintainers             ryandesign
 platforms               darwin
 homepage                http://www.pdflabs.com/tools/pdftk-the-pdf-toolkit/
 master_sites            ${homepage}
 use_zip                 yes
-extract.suffix          -src${extract.suffix}
 use_configure           no
 universal_variant       no
 use_parallel_build      no
@@ -35,8 +34,11 @@ long_description \
     Uncompress and Re-Compress Page Streams \
     Repair Corrupted PDF (Where Possible)
 
-checksums               sha1    ab701140a4eb78f0c855144a375fd52a8e6b0734 \
-                        rmd160  33206067de0e093a18458523ee3bb46bcf72864b
+checksums               sha1    7cb137dcba885caff32ff96b7e11c9dc4ce2cba7 \
+                        rmd160  cacd286759005f002f5a46c0af28d3a1aaad73eb
+
+distname                ${name}-${version}-src
+worksrcdir              ${name}-${version}-dist
 
 depends_lib \
     port:libiconv
