py*-paramiko: homepage change
git-svn-id: https://svn.macports.org/repository/macports/trunk@72981 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-paramiko/Portfile
+++ b/dports/python/py-paramiko/Portfile
@@ -17,7 +17,7 @@ long_description  This is a library for making SSH2 connections (client \
     and hash methods are supported. SFTP client and server mode are both \
     supported too.
 
-homepage          http://www.lag.net/paramiko/
+homepage          http://pypi.python.org/pypi/paramiko/
 master_sites      ${homepage}download/
 distname          paramiko-${version}
 
