--- a/dports/python/py27-paramiko/Portfile
+++ b/dports/python/py27-paramiko/Portfile
@@ -17,7 +17,7 @@ long_description  This is a library for making SSH2 connections (client \
     and hash methods are supported. SFTP client and server mode are both \
     supported too.
 
-homepage          http://www.lag.net/paramiko/
+homepage          http://pypi.python.org/pypi/paramiko/
 master_sites      ${homepage}download/
 distname          paramiko-${version}
 
