fugu: 32-bit only (#23016)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72983 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/fugu/Portfile
+++ b/dports/aqua/fugu/Portfile
@@ -24,6 +24,8 @@ checksums		md5 977b15709364f2fc26d0152a7667d379 \
 				sha1 f52458be93a57b8f7b1438a9bf790d7b8be71247 \
 				rmd160 6b7503b071abea4f764da9cbfc62b6d6e29ab0c2
 
+supported_archs	i386 ppc
+
 xcode.destroot.settings SKIP_INSTALL=yes
 
 post-patch {
