--- a/dports/tex/kile-devel/Portfile
+++ b/dports/tex/kile-devel/Portfile
@@ -2,12 +2,13 @@
 # $Id$
 
 PortSystem          1.0
-PortGroup           kde4 1.0
+PortGroup           kde4 1.1
 
 name                kile-devel
 version             2.1b4
+revision            1
 categories          tex kde kde4
-maintainers         users.sourceforge.net:nicos_pavlov
+maintainers         users.sourceforge.net:nicos_pavlov openmaintainer
 
 description         KDE Integrated LaTeX Environment
 long_description    Kile is a user friendly TeX/LaTeX editor for the KDE \
@@ -28,7 +29,5 @@ use_bzip2           yes
 depends_lib         port:kdelibs4 \
                     port:kdebase4-runtime \
                     port:kdegraphics4
-
-configure.args-append ../${distname}
 
 universal_variant   no
