--- a/dports/java/junit/Portfile
+++ b/dports/java/junit/Portfile
@@ -5,10 +5,12 @@ PortSystem      1.0
 
 name            junit
 version         4.6
-revision        1
+revision        2
 categories      java devel
 platforms       darwin
 maintainers     nomaintainer
+supported_archs noarch
+
 description     Java framework for repeatable tests
 
 long_description \
@@ -64,5 +66,3 @@ variant doc description {Install extra documentation} {
         file copy ${worksrcpath}/javadoc ${destroot}${docdir}/
     }
 }
-
-universal_variant   no
