--- a/dports/lang/swi-prolog-devel/Portfile
+++ b/dports/lang/swi-prolog-devel/Portfile
@@ -6,7 +6,7 @@ PortSystem	1.0
 name		swi-prolog-devel
 conflicts	swi-prolog swi-prolog-lite
 epoch		20051223
-version		5.11.6
+version		5.11.8
 
 categories	lang
 maintainers	uva.nl:J.Wielemaker logtalk.org:pmoura
@@ -30,9 +30,9 @@ master_sites	http://www.swi-prolog.org/download/devel/src/
 dist_subdir	swi-prolog
 
 checksums       \
-	md5     575b4553803a721cd53307402e953880 \
-	sha1    d4b1b133c3de94ebaecf13e3fcc561013fc60ff6 \
-	rmd160  e5818411be1a86414f74fd55e13be1955228179a
+	md5     e1e5ca2b5bd740398dd9321db7b8b8dd \
+	sha1    4d3b1f8b587acc9aa26fde7542ef392de5a4d3c7 \
+	rmd160  c4f476520e8a587052e78bc48889dabba62791ab
 
 depends_build   \
 	port:gawk	\
@@ -114,6 +114,8 @@ variant st conflicts mt description {Single-threaded} {
 variant mt conflicts st description {Multi-threaded} {
 	configure.args-append --enable-mt
 }
+
+universal_variant   no
 
 livecheck.type      regexm
 livecheck.url       ${homepage}download/devel
