faad2: remove obsolete bits (e.g. #19292), change manual autoreconf to use_autoreconf
git-svn-id: https://svn.macports.org/repository/macports/trunk@73002 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/faad2/Portfile
+++ b/dports/audio/faad2/Portfile
@@ -20,21 +20,10 @@ checksums           md5     ee1b4d67ea2d76ee52c5621bc6dbf61e \
                     sha1    80eaaa5cc576c35dd28863767b795c50cbcc0511 \
                     rmd160  3f0ca461e2953014d5b17edccb3337767d478b8d
 
-depends_build   \
-    port:libtool \
-    port:autoconf \
-    port:automake
+use_autoreconf  yes
+autoreconf.args -vif
 
-pre-configure {
-    system "cd ${worksrcpath} && LIBTOOLIZE=${prefix}/bin/glibtoolize autoreconf -vif"
-    reinplace "s|-flat_namespace -undefined suppress|-undefined error|g" "${worksrcpath}/aclocal.m4"
-}
-
-configure.args  --without-bmp --without-xmms --without-drm --without-mpeg4ip
-
-platform darwin {
-    configure.cflags-append  -DHAS_LRINTF
-}
+configure.args  --without-xmms --without-drm --without-mpeg4ip
 
 livecheck.type  regex
 livecheck.url   http://www.audiocoding.com/downloads.html
