--- a/dports/irc/bitlbee/Portfile
+++ b/dports/irc/bitlbee/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name			bitlbee
-version			1.2.7
+version			3.0
 categories		irc net
 platforms		darwin
 maintainers		yeled
@@ -15,15 +15,15 @@ long_description	bitlbee is an IRC server that can connect to IM \
 
 homepage		http://www.bitlbee.org/
 master_sites		http://get.bitlbee.org/src/
-checksums           md5     46cb8c0a930970cccd09dce4b3155cae \
-                    sha1    d1ed04a5ff18de67d96ba51d8a11bbd8e6d78ef3 \
-                    rmd160  5eec7fff68ade914d3e1da5b0e149ac963446827
+checksums           md5     455fc8070d758c2bb3442ef4c709ad69 \
+                    sha1    c791d46b974187a1d4cf341418c3d1729f9b9658 \
+                    rmd160  7d3e9fbbf2835c014bbaf64d926aa00b3a66624d
 
 depends_lib		port:gnutls port:gettext path:lib/pkgconfig/glib-2.0.pc:glib2 port:libgcrypt \
 				port:libgpg-error port:libiconv 
 
 patchfiles		patch-configure.diff
-configure.args	--config=${prefix}/var/lib/bitlbee/ --ssl=gnutls
+configure.args	--config=${prefix}/var/lib/bitlbee/ --ssl=gnutls --otr=0
 configure.universal_args
 
 destroot.target	install install-etc
@@ -44,3 +44,11 @@ post-activate {
 livecheck.type  regex
 livecheck.url   ${master_sites}
 livecheck.regex "${name}-(\\d+(?:\\.\\d+)*)${extract.suffix}"
+
+default_variants +otr
+
+variant otr description {Off-the-Record messaging} {
+	configure.args-delete --otr=0
+	configure.args-append --otr=1
+	depends_lib-append    port:libotr
+}
