Shiira2: let the portgroup take care of setting ARCHS
git-svn-id: https://svn.macports.org/repository/macports/trunk@73004 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/Shiira2/Portfile
+++ b/dports/aqua/Shiira2/Portfile
@@ -25,19 +25,13 @@ checksums       md5 95704032b91f29417f4fee698cce4ed4 \
 use_zip         yes
 
 patchfiles \
-                patch-HMDTAppKit_xcodeproj__project_pbxproj.${os.arch}.diff      \
-                patch-HMDTFoundation_xcodeproj__project_pbxproj.${os.arch}.diff  \
-                patch-HMDTWebKit_xcodeproj__project_pbxproj.${os.arch}.diff      \
-                patch-Shiira_xcodeproj__project_pbxproj.${os.arch}.diff
+                patch-HMDTAppKit_xcodeproj__project_pbxproj.diff      \
+                patch-HMDTFoundation_xcodeproj__project_pbxproj.diff  \
+                patch-HMDTWebKit_xcodeproj__project_pbxproj.diff      \
+                patch-Shiira_xcodeproj__project_pbxproj.diff
 
 worksrcdir      ${distname}/shiira2/trunk
 
 xcode.target    Shiira
 
-variant universal {
-    patchfiles-delete \
-        patch-HMDTAppKit_xcodeproj__project_pbxproj.${os.arch}      \
-        patch-HMDTFoundation_xcodeproj__project_pbxproj.${os.arch}  \
-        patch-HMDTWebKit_xcodeproj__project_pbxproj.${os.arch}      \
-        patch-Shiira_xcodeproj__project_pbxproj.${os.arch}
-}
+supported_archs i386 ppc
